hphp/test/slow/inout/bad-call-7.php.expectf

Fatal error: syntax error, unexpected T_OBJECT_OPERATOR, expecting ')' in %s/bad-call-7.php on line 3
